--- a/youshu/package.json.tmpl
+++ b/youshu/package.json.tmpl
@@ -10,22 +10,22 @@
     "framework": "{{ framework }}"
   },
   "scripts": {
+    "build:h5": "taro build --type h5",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
     "build:tt": "taro build --type tt",
     "build:qq": "taro build --type qq",
+    "dev:h5": "npm run build:h5 -- --watch",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "test": "jest"
+    "dev:qq": "npm run build:qq -- --watch"
   },
   "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
+    "defaults and fully supports es6-module",
+    "maintained node versions"
   ],
   "author": "",
   "dependencies": {
@@ -46,16 +46,13 @@
     "@tarojs/react": "{{ version }}",
     "react-dom": "^18.0.0",
     "react": "^18.0.0",{{/if}}{{#if (eq framework "Preact") }}
-    "preact": "^10.5.15",{{/if}}{{#if (eq framework "Vue") }}
-    "@tarojs/plugin-framework-vue2": "{{ version }}",
-    "vue-template-compiler": "^2.5.0",
-    "vue": "^2.5.0",{{/if}}{{#if (eq framework "Vue3") }}
+    "preact": "^10.5.15",{{/if}}{{#if (eq framework "Vue3") }}
     "@tarojs/plugin-framework-vue3": "{{ version }}",
     "vue": "^3.0.0",{{/if}}
+    "sr-sdk-h5": "^1.3.1",
     "sr-sdk-wxapp": "^1.3.6"
   },{{#if (eq compiler "Vite") }}
   "devDependencies": {
-    "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
@@ -73,9 +70,7 @@
     "react-refresh": "^0.11.0",{{/if}}{{#if (eq framework "Preact") }}
     "@preact/preset-vite": "^2.5.0",
     "@prefresh/core": "^1.3.4",
-    "@prefresh/babel-plugin": "^0.4.1",{{/if}}{{#if (eq framework "Vue") }}
-    "@vitejs/plugin-vue2": "^2.2.0",
-    "eslint-plugin-vue": "^8.x",{{/if}}{{#if (eq framework "Vue3") }}
+    "@prefresh/babel-plugin": "^0.4.1",{{/if}}{{#if (eq framework "Vue3") }}
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "eslint-plugin-vue": "^8.0.0",{{/if}}{{#if (eq css "Sass") }}
@@ -85,9 +80,8 @@
     "@typescript-eslint/parser": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",{{/if}}
-    "postcss": "^8.4.18",
-    "jest-environment-jsdom": "^29.5.0"
-  }{{/if}}{{#if (includes "Webpack4" "Webpack5" s=compiler)}}
+    "@babel/core": "^7.8.0"
+  }{{/if}}{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
@@ -95,13 +89,10 @@
     "eslint-config-taro": "{{ version }}",
     "eslint": "^8.12.0",
     "stylelint": "^14.4.0",
-    "@types/webpack-env": "^1.13.6",{{#if (eq compiler "Webpack4") }}
-    "@tarojs/mini-runner": "{{ version }}",
-    "@tarojs/webpack-runner": "{{ version }}",
-    "webpack": "4.46.0",{{/if}}{{#if (eq compiler "Webpack5") }}
+    "@types/webpack-env": "^1.13.6",
     "webpack": "5.78.0",
     "@tarojs/taro-loader": "{{ version }}",
-    "@tarojs/webpack5-runner": "{{ version }}",{{/if}}{{#if (includes "React" "Preact" s=framework)}}
+    "@tarojs/webpack5-runner": "{{ version }}",{{#if (includes "React" "Preact" s=framework)}}
     "@tarojs/test-utils-react": "^0.1.1",
     "@types/react": "^18.0.0",
     "eslint-plugin-react": "^7.8.2",
@@ -111,13 +102,9 @@
     "react-refresh": "^0.11.0",{{/if}}{{#if (eq framework "Preact") }}
     "@prefresh/webpack": "^3.2.3",
     "@prefresh/core": "^1.3.4",
-    "@prefresh/babel-plugin": "^0.4.1",{{/if}}{{#if (includes "Vue" "Vue3" s=framework)}}
+    "@prefresh/babel-plugin": "^0.4.1",{{/if}}{{#if (eq framework "Vue3")}}
     "css-loader": "3.4.2",
-    "style-loader": "1.3.0",{{/if}}{{#if (eq framework "Vue") }}
-    "@tarojs/test-utils-vue": "^0.1.1",
-    "@vue/babel-preset-jsx": "^1.2.4",
-    "vue-loader": "^15.9.2",
-    "eslint-plugin-vue": "^8.x",{{/if}}{{#if (eq framework "Vue3") }}
+    "style-loader": "1.3.0",
     "@tarojs/test-utils-vue3": "^0.1.1",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.0",
@@ -127,9 +114,6 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",{{/if}}
-    "postcss": "^8.4.18",
-    "@types/jest": "^29.3.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.5.0"
+    "postcss": "^8.4.18"
   }{{/if}}
 }
