--- a/youshu/package.json.tmpl
+++ b/youshu/package.json.tmpl
@@ -53,6 +53,7 @@
     "sr-sdk-wxapp": "^1.3.6"
   },{{#if (eq compiler "Vite") }}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
@@ -62,6 +63,7 @@
     "terser": "^5.16.8",
     "vite": "^4.2.0",{{#if (includes "React" "Preact" s=framework)}}
     "@tarojs/test-utils-react": "^0.1.1",
+    "@babel/preset-react": "^7.24.1",
     "@types/react": "^18.0.0",
     "@vitejs/plugin-react": "^4.1.0",
     "eslint-plugin-react": "^7.8.2",
@@ -83,6 +85,7 @@
     "@babel/core": "^7.8.0"
   }{{/if}}{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
@@ -93,6 +96,7 @@
     "webpack": "5.78.0",
     "@tarojs/taro-loader": "{{ version }}",
     "@tarojs/webpack5-runner": "{{ version }}",{{#if (includes "React" "Preact" s=framework)}}
+    "@babel/preset-react": "^7.24.1",
     "@tarojs/test-utils-react": "^0.1.1",
     "@types/react": "^18.0.0",
     "eslint-plugin-react": "^7.8.2",
