--- a/redux/package.json.tmpl
+++ b/redux/package.json.tmpl
@@ -27,13 +27,11 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch",
-    "test": "jest"
+    "dev:quickapp": "npm run build:quickapp -- --watch"
   },
   "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
+    "defaults and fully supports es6-module",
+    "maintained node versions"
   ],
   "author": "",
   "dependencies": {
@@ -59,19 +57,16 @@
     "react-dom": "^18.0.0",
     "react": "^18.0.0"{{/if}}{{#if (eq framework "Preact") }}
     "preact": "^10.5.15"{{/if}}
-  },{{#if (includes "Webpack4" "Webpack5" s=compiler)}}
+  },{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "@types/webpack-env": "^1.13.6",
-    "@tarojs/test-utils-react": "^0.1.1",
-    "@types/react": "^18.0.0",{{#if (eq compiler "Webpack4") }}
-    "@tarojs/mini-runner": "{{ version }}",
-    "@tarojs/webpack-runner": "{{ version }}",
-    "webpack": "4.46.0",{{/if}}{{#if (eq compiler "Webpack5") }}
-    "webpack": "5.78.0",
+    "@types/react": "^18.0.0",
+    "webpack": "5.91.0",
     "@tarojs/taro-loader": "{{ version }}",
-    "@tarojs/webpack5-runner": "{{ version }}",{{/if}}
+    "@tarojs/webpack5-runner": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
     "eslint-config-taro": "{{ version }}",
     "eslint": "^8.12.0",{{#if (eq framework "React") }}
@@ -90,12 +85,11 @@
     "tsconfig-paths-webpack-plugin": "^4.0.1"{{/if}},
     "postcss": "^8.4.18",
     "ts-node": "^10.9.1",
-    "@types/node": "^18.15.11",
-    "@types/jest": "^29.3.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.5.0"
-  },{{/if}}{{#if (eq compiler "Vite") }}
+    "@types/node": "^18.15.11"
+  }{{/if}}{{#if (eq compiler "Vite") }}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/preset-react": "^7.24.1",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
@@ -105,7 +99,6 @@
     "stylelint": "^14.4.0",
     "terser": "^5.16.8",
     "vite": "^4.2.0",
-    "@tarojs/test-utils-react": "^0.1.1",
     "@types/react": "^18.0.0",
     "@vitejs/plugin-react": "^4.1.0",
     "eslint-plugin-react": "^7.8.2",
@@ -121,12 +114,8 @@
     "@typescript-eslint/parser": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",{{/if}}
-    "postcss": "^8.4.18",
-    "jest-environment-jsdom": "^29.5.0"
-  },{{/if}}
-  "resolutions": {
-    "@types/react": "^17.0.2"
-  }
+    "postcss": "^8.4.18"
+  }{{/if}}
 }
 
 
