--- a/redux/package.json.tmpl
+++ b/redux/package.json.tmpl
@@ -59,6 +59,7 @@
     "preact": "^10.5.15"{{/if}}
   },{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
