--- a/vue3-pinia/package.json.tmpl
+++ b/vue3-pinia/package.json.tmpl
@@ -25,8 +25,7 @@
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch",
-    "test": "jest"
+    "dev:quickapp": "npm run build:quickapp -- --watch"
   },
   "browserslist": [
     "last 3 versions",
@@ -54,6 +53,7 @@
     "pinia": "^2.0.10"
   },{{#if (eq compiler "Vite") }}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
@@ -73,25 +73,21 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",{{/if}}
-    "postcss": "^8.4.18",
-    "jest-environment-jsdom": "^29.5.0"
-  }{{/if}}{{#if (includes "Webpack4" "Webpack5" s=compiler)}}
+    "postcss": "^8.4.18"
+  }{{/if}}{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
     "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "{{ version }}",
     "eslint-config-taro": "{{ version }}",
-    "eslint": "^8.12.0",{{#if (eq compiler "Webpack4") }}
-    "@tarojs/mini-runner": "{{ version }}",
-    "@tarojs/webpack-runner": "{{ version }}",
-    "webpack": "4.46.0",{{/if}}{{#if (eq compiler "Webpack5") }}
-    "webpack": "5.78.0",
+    "eslint": "^8.12.0",
+    "webpack": "5.91.0",
     "@tarojs/taro-loader": "{{ version }}",
-    "@tarojs/webpack5-runner": "{{ version }}",{{/if}}
+    "@tarojs/webpack5-runner": "{{ version }}",
     "css-loader": "3.4.2",
     "style-loader": "1.3.0",
-    "@tarojs/test-utils-vue3": "^0.1.1",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.0",
     "vue-loader": "^17.0.0",{{#if typescript }}
@@ -101,9 +97,6 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",{{/if}}
-    "postcss": "^8.4.18",
-    "@types/jest": "^29.3.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.5.0"
+    "postcss": "^8.4.18"
   }{{/if}}
 }
