feat: 修改pinia 模版的 browserslist 字段

--- a/vue3-pinia/package.json.tmpl
+++ b/vue3-pinia/package.json.tmpl
@@ -28,9 +28,8 @@
     "dev:quickapp": "npm run build:quickapp -- --watch"
   },
   "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
+    "defaults and fully supports es6-module",
+    "maintained node versions"
   ],
   "author": "",
   "license": "MIT",
