--- a/react-NutUI/package.json.tmpl
+++ b/react-NutUI/package.json.tmpl
@@ -58,6 +58,8 @@
     "preact": "^10.5.15"{{/if}}
   },{{#if (includes "Webpack4" "Webpack5" s=compiler)}}
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "babel-plugin-import": "^1.13.8",
     "@tarojs/cli": "{{ version }}",
@@ -90,8 +92,9 @@
     "@types/node": "^18.15.11"
   }{{/if}}{{#if (eq compiler "Vite") }}
   "devDependencies": {
+    "@babel/preset-react": "^7.24.1",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
-    "babel-plugin-import": "^1.13.8",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
