--- a/react-NutUI/package.json.tmpl
+++ b/react-NutUI/package.json.tmpl
@@ -95,6 +95,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
+    "babel-plugin-import": "^1.13.8",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
     "babel-preset-taro": "{{ version }}",
