--- a/react-NutUI/package.json.tmpl
+++ b/react-NutUI/package.json.tmpl
@@ -50,7 +50,7 @@
     "@tarojs/runtime": "{{ version }}",
     "@tarojs/shared": "{{ version }}",
     "@tarojs/taro": "{{ version }}",
-    "@nutui/nutui-react-taro": "^2.3.0",
+    "@nutui/nutui-react-taro": "{{ version }}",
     "@tarojs/plugin-framework-react": "{{ version }}",{{#if (eq framework "React") }}
     "@tarojs/react": "{{ version }}",
     "react-dom": "^18.0.0",
