--- a/react-NutUI/package.json.tmpl
+++ b/react-NutUI/package.json.tmpl
@@ -104,6 +104,7 @@
     "stylelint": "^14.4.0",
     "terser": "^5.16.8",
     "vite": "^4.2.0",
+    "vite-plugin-imp": "^2.4.0",
     "@tarojs/test-utils-react": "^0.1.1",
     "@types/react": "^18.0.0",
     "@vitejs/plugin-react": "^4.1.0",
