feat: 修改taro-hook模版

--- a/taro-hooks@2x/package.json.tmpl
+++ b/taro-hooks@2x/package.json.tmpl
@@ -58,10 +58,11 @@
     "preact": "^10.5.15",{{/if}}{{#if (eq framework "Vue3") }}
     "@tarojs/plugin-framework-vue3": "{{ version }}",
     "@taro-hooks/plugin-vue": "2",
-    "vue": "^3.0.0",{{/if}},
-    "taro-hooks": "2",
+    "vue": "^3.0.0",{{/if}}
+    "taro-hooks": "2"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
