--- a/taro-hooks@2x/package.json.tmpl
+++ b/taro-hooks@2x/package.json.tmpl
@@ -59,9 +59,39 @@
     "@taro-hooks/plugin-vue": "2",
     "vue": "^3.0.0",{{/if}}
     "taro-hooks": "2"
-  },
+  },{{#if (eq compiler "Vite") }}
   "devDependencies": {
-    "babel-plugin-import": "^1.13.3",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@tarojs/cli": "{{ version }}",
+    "@tarojs/vite-runner": "{{ version }}",
+    "babel-preset-taro": "{{ version }}",
+    "eslint-config-taro": "{{ version }}",
+    "eslint": "^8.12.0",
+    "stylelint": "^14.4.0",
+    "terser": "^5.16.8",
+    "vite": "^4.2.0",{{#if (includes "React" "Preact" s=framework)}}
+    "@babel/preset-react": "^7.24.1",
+    "@types/react": "^18.0.0",
+    "@vitejs/plugin-react": "^4.1.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react-hooks": "^4.2.0",{{/if}}{{#if (eq framework "React") }}
+    "react-refresh": "^0.11.0",{{/if}}{{#if (eq framework "Preact") }}
+    "@preact/preset-vite": "^2.5.0",
+    "@prefresh/core": "^1.3.4",
+    "@prefresh/babel-plugin": "^0.4.1",{{/if}}{{#if (eq framework "Vue3") }}
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "eslint-plugin-vue": "^8.0.0",{{/if}}{{#if (eq css "Sass") }}
+    "sass": "^1.60.0",{{/if}}{{#if (eq css "Less") }}
+    "less": "^4.1.3",{{/if}}{{#if (eq css "Stylus") }}
+    "stylus": "^0.59.0",{{/if}}{{#if typescript }}
+    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "typescript": "^5.1.0",{{/if}}
+    "@babel/core": "^7.8.0"
+  }{{/if}}{{#if (eq compiler "Webpack5")}}
+  "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
@@ -94,5 +124,5 @@
     "typescript": "^5.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",{{/if}}
     "postcss": "^8.4.18"
-  }
+  }{{/if}}
 }
