--- a/taro-hooks@2x/package.json.tmpl
+++ b/taro-hooks@2x/package.json.tmpl
@@ -61,6 +61,7 @@
     "taro-hooks": "2"
   },{{#if (eq compiler "Vite") }}
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@tarojs/cli": "{{ version }}",
     "@tarojs/vite-runner": "{{ version }}",
@@ -92,6 +93,7 @@
     "@babel/core": "^7.8.0"
   }{{/if}}{{#if (eq compiler "Webpack5")}}
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
     "@tarojs/cli": "{{ version }}",
